samples/_failures_safe/1761040292_be86bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29988772.c: In function ‘main’:
./samples/SAFE/__tmp_29988772.c:158:17: error: expected ‘;’ at end of input
  158 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_29988772.c:158:9: error: expected declaration or statement at end of input
  158 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_29988772.c:158:9: error: expected declaration or statement at end of input
